--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,64 @@
-body  {
+body {
+    font-family: sans-serif;
+}
 
-    background-color: red;
+.wrapper {
+    display: flex;
+    flex-flow: row wrap;
+    text-align: center;
+}
+
+.wrapper > * {
+    padding: 10px;
+    margin: 10px;
+    flex: 1 100%;
+    border-radius: 10px;    
+}
+.header {
+    background: tomato;
+    height: 120px;
+}
+
+.nav {
+    background: plum;
+    height: 80px;
+}
+
+.footer {
+    background: skyblue;
+    height: 80px;
+}
+
+.main {
+    background: greenyellow;
+    height: 300px;
+    padding: 40px;
+    font-size: 20px;
+    text-align: center;
+}
+
+.aside1 {
+    background: yellowgreen;
+}
+
+/* Responsive */
+@media all and (min-width: 800px) {
+    .main {
+        flex: 2;
+    }
+    .aside1 {
+        order: 2;
+    }
+    .main {
+        order: 1;
+    }
+    .footer {
+        order: 4;
+    }
+}
+
+@media all and (min-width: 600px) {
+    .aside {
+        flex: 1;
+    }
 }
